fix hover dropdown stacking (add z-index)

--- a/public/css/_hover_dropdown.scss
+++ b/public/css/_hover_dropdown.scss
@@ -42,4 +42,5 @@
 .hover_dropdown:hover .hover_dropdown-content,
 .hover_dropdown-content:hover {
     display: flex;
+    z-index: 5;
 }
